# libsu-nativebridge

./: README.md
service/: build.gradle.kts
service/src/main/cpp/: CMakeLists.txt  build.bat
service/src/main/cpp/includes/: Logger.h
service/src/main/cpp/includes/nativebridge/: native_bridge.h
service/src/main/cpp/src/nativebridge/: mian.cc
service/src/main/java/com/topjohnwu/superuser/internal/: RootServiceManager.java
